<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/input_num_tv"
        android:layout_width="wrap_content"
        android:layout_height="135dp"
        android:text="@string/input_num_def"
        android:textColor="@color/white"
        android:textSize="100sp"
        android:layout_gravity="right"
        android:layout_marginTop="130dp"
        android:layout_marginRight="20dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/clear_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/clear"
            android:textSize="35sp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/plus_minus_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/plus_minus"
            android:textSize="35sp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/percent_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_grey"
            android:text="@string/percent"
            android:textSize="35sp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/divide_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_orange"
            android:text="@string/divide"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/seven_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_dark_grey"
            android:text="@string/seven"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/eight_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_dark_grey"
            android:text="@string/eight"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/nine_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_dark_grey"
            android:text="@string/nine"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/multiply_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_orange"
            android:text="@string/multiply"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/four_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_dark_grey"
            android:text="@string/four"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/five_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_dark_grey"
            android:text="@string/five"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/six_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_dark_grey"
            android:text="@string/six"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/minus_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_orange"
            android:text="@string/minus"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/one_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_dark_grey"
            android:text="@string/one"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/two_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_dark_grey"
            android:text="@string/two"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/three_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_dark_grey"
            android:text="@string/three"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/plus_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_orange"
            android:text="@string/plus"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/zero_btn"
            android:layout_width="175dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_dark_grey"
            android:text="@string/zero"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:gravity="left|center_vertical"
            android:paddingLeft="34dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/point_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_dark_grey"
            android:text="@string/point"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
        <Button
            android:id="@+id/equals_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/round_button_orange"
            android:text="@string/equals"
            android:textSize="35sp"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>

</LinearLayout>